Fix dropdown overflow (#2875)
* Merge

* Fix overflow on dropdown

--- a/client/one/app/styles/libExtensions.less
+++ b/client/one/app/styles/libExtensions.less
@@ -959,17 +959,6 @@ g.highcharts-tooltip {
     }
 }
 
-///////////////////////////
-// Dropdown iPhone Fix //
-///////////////////////////
-
-.dropdown.open {
-    .dropdown-menu {
-        overflow: visible;
-    }
-}
-
-
 ////////////////////////////
 // EE //
 ////////////////////////////
